--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"tsc",
-    "start":"tsc && nodemon dist/app.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc-watch --onSuccess \"node dist/app.js\""
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
+    "tsc-watch": "^4.5.0",
     "tslint": "^6.1.3",
     "typescript": "^4.4.4"
   },
